fix: fixed test